[package]
name = "mcl-stagedrive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["microdrive", "madlib"]
microdrive = ["mcl-microdrive-sys"]
madlib = ["mcl-madlib-sys"]

[dependencies]
mcl-microdrive-sys = {path="../mcl-microdrive-sys", optional = true}
mcl-madlib-sys = {path="../mcl-madlib-sys", optional = true}

[dev-dependencies]
clap = "2.33"
hidapi = "1.2"
