[package]
name = "app"
categories = ["embedded", "no-std"]
authors = ["Hayley Deckers <hayley@codingcat.nl>"]
description = "A toy square wave generator that can be controlled over usb-cdc"
keywords = ["arm", "cortex-m"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2018"

[dependencies]
panic-halt = "0.2"
embedded-hal = "0.2.5"
cortex-m-rtic = "0.5.6"
usb-device = "0.2.8"
usbd-serial = "0.1.1"
cortex-m = "0.7"

[dependencies.stm32f1xx-hal]
version = "0.7"
features = ["rt", "stm32f103", "stm32-usbd", "medium"]

# this lets you use `cargo fix`!
[[bin]]
name = "app"
test = false
bench = false

[profile.dev]
opt-level = 1
codegen-units = 16
debug = true
lto = false

[profile.release]
opt-level = "s"     # optimize for size
codegen-units = 1   # better optimizations
debug = true        # symbols are nice and they don't increase the size on Flash
lto = true          # better optimizations
